# finalproject_shichkin_mikhail_M25-555

finalproject_shichkin_mikhail_M25-555/: README.md  pyproject.toml
finalproject_shichkin_mikhail_M25-555/valutatrade_hub/: decorators.py  logging_config.py  main.py
finalproject_shichkin_mikhail_M25-555/valutatrade_hub/cli/: interface.py
finalproject_shichkin_mikhail_M25-555/valutatrade_hub/core/: currencies.py  exceptions.py  models.py  usecases.py  utils.py
finalproject_shichkin_mikhail_M25-555/valutatrade_hub/infra/: settings.py
finalproject_shichkin_mikhail_M25-555/valutatrade_hub/parser_service/: api_clients.py  config.py  scheduler.py  storage.py  updater.py
finalproject_shichkin_mikhail_M25-555/valutatrade_hub/parser_service/data/: exchange_rates.json  portfolios.json  rates.json  users.json
