[tool.poetry]
name = "finalproject-shichkin-mikhail-m25-555"
version = "0.1.0"
description = ""
authors = ["Shicimiki <shichkinmikhailv@gmail.com>"]
readme = "README.md"
packages = [{ include = "valutatrade_hub" }]

[tool.poetry.dependencies]
python = "^3.13"
prettytable = "^3.16.0"
requests = "^2.32.5"

[tool.poetry.scripts]
project = "valutatrade_hub.main:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.2"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
